[project]
name = "check-certs"
version = "0.1.0"
description = "Check let's encrypt certificates"
authors = [{ name = "lpofredc", email = "frederic.cloitre@lpo.fr" }]
license = { text = "AGPLv3" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pytz (>=2025.2,<2026.0)",
    "acme (>=4.0.0,<5.0.0)",
    "cryptography (>=44.0.3,<45.0.0)",
]


[project.scripts]
check_certs = 'check_certs.cli:cli'

[tool.poetry]
packages = [{ include = "check_certs"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
