[project]
name = "check-certs"
version = "0.1.0"
description = "Check let's encrypt certificates"
authors = [{ name = "lpofredc", email = "frederic.cloitre@lpo.fr" }]
license = { text = "AGPLv3" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pytz (>=2025.2,<2026.0)",
    "acme (>=4.0.0,<5.0.0)",
    "cryptography (>=44.0.3,<45.0.0)",
]


[project.scripts]
check_certs = 'check_certs.cli:cli'

[tool.poetry]
packages = [{ include = "check_certs"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
flake8 = "^7.2.0"
flake8-isort = "^6.1.2"
pylint = "^3.3.7"



[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 99
target-version = ['py37']

[tool.pylint]
ignored-modules = ["psycopg2.errors","psycopg2"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 99
disable = """
    too-many-arguments,
    too-many-instance-attributes,
    too-few-public-methods
"""
good-names = ["i", "j", "k", "ex", "Run", "_", "db"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
